--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JavaScript function equality challenge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [
     "JavaScript",
@@ -15,6 +16,10 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.45.0",
-    "eslint-config-xo": "^0.43.1"
+    "eslint-config-xo": "^0.43.1",
+    "husky": "^8.0.0"
+  },
+  "dependencies": {
+    "eslint-config-prettier": "^8.8.0"
   }
 }
