--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "devDependencies": {
     "eslint": "^8.45.0",
     "eslint-config-xo": "^0.43.1",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "jest": "^29.6.1"
   },
   "dependencies": {
     "eslint-config-prettier": "^8.8.0"
