--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install"
   },
   "keywords": [
@@ -16,6 +16,7 @@
   "author": "Jesus Alvarez",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
     "eslint": "^8.45.0",
     "eslint-config-xo": "^0.43.1",
     "husky": "^8.0.0",
@@ -23,5 +24,14 @@
   },
   "dependencies": {
     "eslint-config-prettier": "^8.8.0"
+  },
+  "babel": {
+    "env": {
+      "test": {
+        "plugins": [
+          "@babel/plugin-transform-modules-commonjs"
+        ]
+      }
+    }
   }
 }
