--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "jest",
+    "test:w": "jest --watchAll",
     "prepare": "husky install"
   },
   "keywords": [
